# json

./: CMakeLists.txt  README.md  test_issue_2491.cpp
include/nlohmann/: adl_serializer.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
include/nlohmann/detail/: exceptions.hpp  hash.hpp  json_pointer.hpp  macro_scope.hpp  macro_unscope.hpp  value_t.hpp
include/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
include/nlohmann/detail/input/: input_adapters.hpp  parser.hpp
include/nlohmann/detail/meta/: cpp_future.hpp  detected.hpp  type_traits.hpp
include/nlohmann/detail/output/: serializer.hpp
single_include/nlohmann/: json.hpp
